# ComfyUI-RDNA35-Attention

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_JA.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
native/rdna35_pisa_ck/: .gitignore  README.md  pyproject.toml  setup.py
native/rdna35_pisa_ck/csrc/: bindings.cpp  pisa_kernels.cu
native/rdna35_pisa_ck/rdna35_pisa_ck/: __init__.py
native/rdna35_pisa_ck/tests/: test_forward.py
rdna35_block_attention/: __init__.py  anima_pisa_integration.py  comfy_patch.py  diagnostics.py  dispatch.py  full_attention.py  generic_pisa.py  pisa_attention.py  pisa_kernel.py  pisa_patch.py  pisa_runtime.py  reference.py  triton_kernel.py
scripts/: bench_fixed_block_attention.py
tests/: test_anima_pisa_integration.py  test_dispatch_fallbacks.py  test_generic_pisa.py  test_ltx_pisa_contract.py  test_pisa_attention.py  test_pisa_patch.py  test_pisa_runtime.py  test_pisa_runtime_report.py  test_reference.py  test_triton_forward.py  test_wan_pisa_contract.py
workflows/: Anima_BF16_PISA_Pure_E2E_Benchmark.json  Anima_INT8_ConvRot_PISA_E2E_Benchmark.json
